--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,12 +1,12 @@
 
 source "https://rubygems.org"
 gem "jekyll"
+gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 gem "github-pages", group: :jekyll_plugins
 group :jekyll_plugins do
 	gem 'jekyll-sitemap'
 	gem 'jekyll-feed'
 	gem 'jekyll-seo-tag'
 end
-gem 'wdm', '>= 0.1.0'
 
 gem "webrick", "~> 1.7"
